# dotfiles

./: .aerospace.toml  .gitignore  .stow-local-ignore  .stowrc  README.md  Raycast 2025-05-18 17.25.01.rayconfig  Raycast 2025-05-19 15.18.42.rayconfig  brew.sh  claude.md  config.rayconfig  emacs.sh  git.sh  osx.sh  setup_git.sh
.claude/: settings.local.json
.claude/skills/code-review/: SKILL.md
.claude/skills/karpathy-guidelines/: SKILL.md
aerospace/.config/aerospace/: aerospace.toml
ai_skills/: README.md
ai_skills/commands/: dignified-python.md  draft-pr-summary.md  fix-python-docstring.md  plan-python-design.md  practice-dutch.md  review-python-code.md
ai_skills/skills/coding-standards/: SKILL.md  tooling.md
ai_skills/skills/dagster-expert/: SKILL.md
ai_skills/skills/fix-writing/: SKILL.md
ai_skills/skills/improve-codebase-architecture/: SKILL.md
ai_skills/skills/karpathy-guidelines/: SKILL.md
ai_skills/skills/plan-python-design/: SKILL.md
apple_plists/: com.apple.symbolichotkeys.plist.backup
docs/: resolving-squash-merge-conflicts.md
emacs/.emacs.d/: README.org  early-init.el  init.el  personal.el
nvim/.config/nvim/tests/tests_py/: README.md  main.py  pyproject.toml  test_import_sort.py  test_lsp_warnings.py
scripts/: ai.sh  brew.sh  cursor_cli.sh  fetch_ai_skills.sh  git.sh  molten.sh  osx.sh  stow.sh  tmux.sh  tmux_config.sh  zettelkasten.sh
stow/editorconfig/: .editorconfig
stow/zsh/: .zprofile  .zshenv  .zshrc
tmux/: .tmux.conf
zsh/: .p10k.zsh  .zprofile  .zshrc  aliases.zsh  custom.zsh
zshrc/: .zshrc
(+274 files in other folders)
